[package]
name = "height-oracle"
version = "0.1.0"
edition = "2021"

[features]
default = []
generate = ["dep:hex", "dep:anyhow", "dep:bincode", "dep:tempfile"]
embedded = []

[dependencies]
ptr_hash = { path = "crates/PtrHash", features = ["epserde"] }
epserde = "0.8.0"

# Only available with "generate" feature
hex = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
tempfile = { version = "3.0", optional = true }
